Bullet Continuous Collision Detection and Physics Library
Erwin Coumans

2007 Feb 24
	- Added compressed/quantized AABB tree, 16 bytes per node, while supporting 32-bit (triangle) indices. 
	  Should be faster and smaller then original version (quantized aabb check is done in integer space)
		Original aabb tree nodes are still supported. They are 44 bytes, with full floating point precision and additional subPart index.
	- added meter-unit scaling support in ColladaConverter.cpp

2007 Feb 21
	- Build system: updated bullet.pc.in library names
	- Updated EPA comparison integration (missing parameter)
	
2007 Jan 04
	- fixed optimized AABB tree building: in some cases the tree building fails due to unbalanced trees, which generated stack overflow
	
2006 Dec 15
	- added contribution to allow double precision collision detection/dynamics. Define BT_USE_DOUBLE_PRECISION in your project and libraries that include Bullet

2006 Dec 14
	- merged contact and non-contact constraint solving into one loop, will improve stability of jointed bodies during collisions
	- added first draft for hingeConstraint motor
	
2006 Dec 8, Erwin Coumans
	- preparation for SIMD: added btAlignedAllocator and btAlignedObjectArray, to replace stl std::vector, same interface, but compatible with 16 byte alignment
	- cleaned up dependencies in autogenerated msvc projectfiles
	- aligned btVector3 on 16 bytes boundary, under win32. see if developers will come up with problems

2006 Dec 04, Erwin Coumans
	Added btNearCallback. This is similar to Open Dynamics Engine (ODE) dNearCallback, but important differences:
	- contact points are persistent (lifetime more then one frame, for warmstarting/incremental contact point management)
	- continuous collision detection, time of impact
	Added btRigidBody::isInWorld(), returns true if btRigidBody is inside a btCollisionWorld/btDynamicsWorld derived class
	Added angularFactor to btRigidbody, this helps some character control (no angular impulse applied)

